# Estructuras-Lineales

./: CMakeLists.txt  README.md
ActividadIndividual/: CMakeLists.txt  spiderman.cpp
Ejercicios/: assassin_creed.cpp  constante.cpp  free_store_example.cpp  pop_rock.cpp  primera_clase.cpp  primera_funcion.cpp  puntero.cpp  puntero_V2.cpp  sizeof_variables.cpp  tokenization.cpp  variables.cpp  vector.cpp
ExamplesCode/: Concurrencia.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  pop_rock.cpp  tokenization.cpp
Prueba/: CMakeLists.txt
TXT/: CMakeLists.txt  file_to_string.txt
Tareas/ActividadGrupal/: concurrencia.cpp  concurrenciaParalelismo.cpp
Tareas/ActividadIndividual/: peter_parker.jsonl  spiderman.cpp
Tareas/ActividadIndividual2/: CMakeLists.txt  amazonAnalysis.cpp
Tareas/ActividadIndividual3/: CMakeLists.txt  walking_dead.cpp
